Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -458,12 +458,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Object `friends.get` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "#Pulling up documentation for a specific method\n",
-    "friends.get?\n"
+    "friends.get?"
    ]
   },
   {
